added create vehicle and create logbook entry endpoints and implementations
